change clone command

--- a/BertGCN/bertGCN_RoBertaGCN.ipynb
+++ b/BertGCN/bertGCN_RoBertaGCN.ipynb
@@ -44,7 +44,7 @@
         }
       ],
       "source": [
-        "!git clone https://github.com/ZeroRin/BertGCN.git"
+        "!git clone https://github.com/muradh2994/Human-and-Machine-Generated-Text-Classification-using-Graph-Neural-Networks/tree/main/BertGCN.git"
       ]
     },
     {
