--- a/TextGCN/tensorflow_textGCN.ipynb
+++ b/TextGCN/tensorflow_textGCN.ipynb
@@ -150,7 +150,7 @@
         }
       ],
       "source": [
-        "!git clone https://github.com/yao8839836/text_gcn.git"
+        "!git clone https://github.com/muradh2994/Human-and-Machine-Generated-Text-Classification-using-Graph-Neural-Networks/tree/main/TextGCN.git"
       ]
     },
     {
